--- a/Fundamentos/Bloco_3_Introducao-a-HTML-e-CSS/dia-3-html-css-seletores-posicionamento/exercicio_fixacao_combinacoes_e_classes_descendentes/style.css
+++ b/Fundamentos/Bloco_3_Introducao-a-HTML-e-CSS/dia-3-html-css-seletores-posicionamento/exercicio_fixacao_combinacoes_e_classes_descendentes/style.css
@@ -27,3 +27,11 @@ li em{
     font-weight: bold;
 }
 
+.linguagens li:nth-child(-n+3){
+    color: blue;
+}
+
+.linguagens li span{
+    background-color: pink;
+}
+
