--- a/Fundamentos/Bloco_3_Introducao-a-HTML-e-CSS/dia-3-html-css-seletores-posicionamento/exercicio_fixacao_combinacoes_e_classes_descendentes/style.css
+++ b/Fundamentos/Bloco_3_Introducao-a-HTML-e-CSS/dia-3-html-css-seletores-posicionamento/exercicio_fixacao_combinacoes_e_classes_descendentes/style.css
@@ -35,3 +35,31 @@ li em{
     background-color: pink;
 }
 
+.sites li a{
+    text-decoration: none;
+    color: black;
+}
+
+.sites li:nth-of-type(1):hover a{   
+    font-weight: bold;
+    color: orange;    
+}
+
+
+.sites li:nth-of-type(2):hover a{    
+    font-weight: bold;
+    color: green;
+}
+.sites li:nth-of-type(3):hover a{    
+    font-weight: bold;
+    color: black;
+}
+.sites li:nth-of-type(4):hover a{    
+    font-weight: bold;
+    color: yellow;
+}
+.sites li:nth-of-type(5):hover a{  
+    font-weight: bold;
+    color: green;
+}
+
