--- a/Fundamentos/Bloco_3_Introducao-a-HTML-e-CSS/dia-4-html-semantico/exercicios_aula/style.css
+++ b/Fundamentos/Bloco_3_Introducao-a-HTML-e-CSS/dia-4-html-semantico/exercicios_aula/style.css
@@ -1,12 +1,13 @@
 body{
     background-color: darkgrey;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 article{
     margin: auto;
     border: 1px solid black;
     border-radius: 10px;
-    width: 400px;
+    width: 60%;
     background-color: white;
     padding: 15px;
 }
