--- a/Fundamentos/Bloco_3_Introducao-a-HTML-e-CSS/dia-4-html-semantico/exercicios_aula/style.css
+++ b/Fundamentos/Bloco_3_Introducao-a-HTML-e-CSS/dia-4-html-semantico/exercicios_aula/style.css
@@ -39,7 +39,8 @@ article{
     width: 55%;
     background-color: white;
     padding: 15px;
-    margin-left: 20%;
+    margin-left: 25%;
+    max-width: 50%;
     text-align: justify;     
 }
 section{
@@ -48,7 +49,7 @@ section{
 
 .img-center{    
     text-align: center;
-    padding: 10px;    
+    padding: 10px;       
 }
 
 ul{
