--- a/Fundamentos/Bloco_6_HTML_e_CSS_forms_flexbox_e_responsivo/dia-2-bibliotecas-javaScript-e-frameworks-CSS/exercicios-aula/style.css
+++ b/Fundamentos/Bloco_6_HTML_e_CSS_forms_flexbox_e_responsivo/dia-2-bibliotecas-javaScript-e-frameworks-CSS/exercicios-aula/style.css
@@ -1,8 +1,9 @@
-* {
+/* * {
     padding: 0;
     margin: 0;
-}
-header {
+} */
+
+/* header {
     text-align: center;
     margin: 50px 0;
 }
@@ -32,4 +33,12 @@ header {
     border-radius: 10px;
     border: 1px solid gray;
     background-color: white;
+} */
+
+/* ESTILO VIA BOOTSTRAP */
+
+.container {
+    border: 1px solid black;
+    margin-bottom: 30px;
+    padding: 30px;    
 }
