--- a/Fundamentos/Bloco_6_HTML_e_CSS_forms_flexbox_e_responsivo/dia-2-bibliotecas-javaScript-e-frameworks-CSS/exercicios-aula/style.css
+++ b/Fundamentos/Bloco_6_HTML_e_CSS_forms_flexbox_e_responsivo/dia-2-bibliotecas-javaScript-e-frameworks-CSS/exercicios-aula/style.css
@@ -39,6 +39,6 @@
 
 .container {
     border: 1px solid black;
-    margin-bottom: 30px;
-    padding: 30px;    
+    margin: 30px auto;
+    width: 50%;
 }
