--- a/projetos/sd-021-a-project-color-guess/style.css
+++ b/projetos/sd-021-a-project-color-guess/style.css
@@ -1,5 +1,24 @@
+body {
+  background-image: url('img/lapis2.webp');
+  background-position: center;
+  background-size: cover;
+}
+
+#container {
+  margin-top: 50px;
+}
+
 header {
   text-align: center;
+}
+
+main {
+  width: 410px;
+  padding: 30px 0 40px;
+  color: white;
+  background: rgba(0, 0, 0, 0.8);
+  margin: auto;
+  border-radius: 8px;
 }
 
 #rgb-color {
@@ -14,7 +33,7 @@ header {
 }
 
 .ball {
-  border: 1px solid black;
+  border: 4px 4px 4px rgba(0, 0, 0, 0.5);
   border-radius: 50%;
   width: 50px;
   height: 50px;
@@ -30,6 +49,10 @@ header {
 
 #reset-game {
   padding: 6px 30px;
+  margin-top: 15px;
+  border: none;
+  background-color: white;
+  border-radius: 8px;
 }
 
 #box-btn {
