--- a/projetos/sd-021-a-project-mistery-letter/style.css
+++ b/projetos/sd-021-a-project-mistery-letter/style.css
@@ -1,15 +1,48 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-image: url('images/interrogacoes.webp');
+  background-size: cover;
+}
+
 header {
   text-align: center;
+  background: rgba(0, 0, 0, 0.8);
+  width: 98%;
+  margin: auto;
+  padding: 15px;
+  color: white;
 }
 
 #carta-texto {
   width: 100%;
   margin-bottom: 10px;
+  padding: 5px;
+  border-radius: 5px;
 }
 
 #box-input {
   margin: 10% 10% 25px;
   text-align: center;
+}
+
+#criar-carta {
+  margin: 5px 0;
+  padding: 3px 10px;
+  border-radius: 5px;
+}
+
+#container-carta {
+  width: 80%;
+  margin: auto;
+  text-align: center;
+  background: rgba(0, 0, 0, 0.4);
+  padding: 10px;
+  display: none;
+  border-radius: 5px;
 }
 
 .newspaper {
@@ -49,17 +82,21 @@ header {
 }
 
 .rotateleft {
+  display: inline-block;
   transform: rotate(-5deg);
 }
 
 .rotateright {
+  display: inline-block;
   transform: rotate(5deg);
 }
 
 .skewleft {
+  display: inline-block;
   transform: skewX(10deg);
 }
 
 .skewright {
+  display: inline-block;
   transform: skewX(-10deg);
 }
